--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'jacoco'	
 	id 'org.springframework.boot' version '4.0.0'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -12,6 +13,16 @@ java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(21)
 	}
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+       rule {
+           limit {
+                minimum = 0.2
+           }
+       }
+    }
 }
 
 repositories {
